# esperimento_formine_psicologia

./: LICENSE  README.md
arduinocontroller/: CMakeLists.txt  package.xml
arduinocontroller/include/arduinocontroller/: arduinocontroller.h
arduinocontroller/src/: ardcon.cpp  ardcon_node.cpp
driver/: CMakeLists.txt  package.xml
driver/doc/: hardcoded_position.csv
driver/include/driver/: driver.h
driver/scripts/: driver.py
driver/src/: drivejoints.cpp  drivejoints_node.cpp
ur_kdl/: CMakeLists.txt  package.xml
ur_kdl/include/URKDL/: URKDL.h
ur_kdl/launch/: ur_kdl.launch
ur_kdl/src/: ur_kdl.cpp  ur_kdl_node.cpp
ur_kdl/srv/: IK.srv
ur_rtde_controller/src/rtde_controller/: rtde_controller.cpp
