<?xml version="1.0"?>
<package format="2">
  <name>driver</name>
  <version>0.0.0</version>
  <description>The driver package</description>

  <maintainer email="nicholas@todo.todo">nicholas</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>

  <!-- <depend>ur_kdl</depend> -->
  <depend>ur_rtde_controller</depend>

</package>
